--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
 
       <div class="hero-card pop">
-        <img class="teacher" src="assets/professora.jpg" alt="Professora de inglês — A Quebrada Bilíngue">
+        <img class="teacher" src="https://media.licdn.com/dms/image/v2/D4E03AQGAaGuliTZn8Q/profile-displayphoto-crop_800_800/B4EZjKpKnlGwAI-/0/1755746446289?e=1758758400&v=beta&t=TuM36xszGhUmrF0rndji5iYEMeyfsuESX_bl_9Sim1A" alt="Professora de inglês — A Quebrada Bilíngue">
         <div class="badge-floating">🎧 Aprenda com as suas músicas favoritas, aquelas que você ama ouvir e que te fazem sorrir cada vez que você liga elas.</div>
       </div>
     </div>
